# CFD

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  visualization_exp1.ipynb  visualization_exp2.ipynb  visualization_exp3.ipynb  visualization_exp4.ipynb  visualization_exp5.ipynb  visualization_exp6.ipynb
.github/workflows/: Lint.yml
src/: nonviscouslaminar_exp1.cpp  nonviscouslaminar_exp2.cpp  nonviscouslaminar_exp3.cpp  nonviscouslaminar_exp4.cpp  nonviscouslaminar_exp5.cpp
